# PestML

./: LICENSE  README.md  logging_conf.yaml  pyproject.toml
app/: snd_sep.py  tool_trial.py  torch_trial.py  util.py
config/insect_id/hparams/: train_ecapa_tdnn-nmels160.yaml  train_ecapa_tdnn-trial-nmels160.yaml  train_ecapa_tdnn-trial.yaml  train_ecapa_tdnn.yaml
config/insect_snd_sep/hparams/convtasnet/: convtasnet-mix2-gh-cricket-clean-4k-k8s4.yaml  convtasnet-mix2-gh-cricket-clean-k16s8.yaml  convtasnet-mix2-gh-cricket-clean-k8s4-causal-false.yaml  convtasnet-mix2-gh-cricket-clean-k8s4.yaml
config/insect_snd_sep/hparams/dprnn/: mix2-gh-cricket-aug-clean-k16s8.yaml  mix2-gh-cricket-aug-clean-k8s4.yaml  mix2-gh-cricket-clean-4k-k8s4.yaml
config/insect_snd_sep/hparams/dptnet/: mix2-gh-cricket-aug-clean-k16s8.yaml  mix2-gh-cricket-aug-clean-k8s4-nhead16.yaml  mix2-gh-cricket-aug-clean-k8s4.yaml  mix2-gh-cricket-clean-4k-k8s4-layer2.yaml  (+2 more)
notebooks/: basic_model.ipynb  conf_matrix.ipynb  data_loader.ipynb  fashion_mnist.ipynb  snd_sep.ipynb  torch_models.ipynb
pytorchstudy/: imagenet_confmatrix.py  ssqueezepy_trial.py
pytorchstudy/insect_snd_id/: README.md  train_speaker_embeddings.py  verify_speaker.py
pytorchstudy/insect_snd_sep/: README.md  librimix_scripts.md  prepare_data.md  prepare_data.py  train.py  train_code.md  train_insect.py  train_insect2.py  train_insect_gaudi.py
pytorchstudy/torch/: conv.py
pytorchstudy/util/: README.md  dataset.py  loguru_setup.py  plot.py
tests/insect_snd_id/: test_verify_speaker.py
tests/util/: test_dataset.py
(+54 files in other folders)
