[tool.poetry]
name = "pytorch-study"
version = "0.1.0"
description = ""
authors = ["Kevin Zhang <zhangjw@hotmail.com>"]
readme = "README.md"
packages = [{include = "pytorchstudy"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
pyfunctional = {git = "https://github.com/EntilZha/PyFunctional.git"}
returns = "^0.20.0"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
